# Atalanta

./: .gitignore  .gitmodules  Bender.local  Bender.yml  CHANGELOG.md  Makefile  README.md
.github/workflows/: changelog.yaml
examples/: README.md
examples/atalanta-bsp/: Cargo.toml  README.md
examples/atalanta-bsp/macros/: Cargo.toml
examples/atalanta-bsp/macros/src/: trampoline.rs
examples/atalanta-bsp/src/: clic.rs  mtimer.rs  tb.rs  timer_group.rs  trap.rs  uart.rs
examples/atalanta-bsp/src/clic/: intie.rs
examples/atalanta-bsp/src/mmap/: apb_timer.rs  cfg.rs  clic.rs  gpio.rs  uart.rs
examples/atalanta_bsp/: Cargo.toml  README.md  memory.x
examples/atalanta_bsp/macros/: Cargo.toml
examples/atalanta_bsp/macros/src/: archi.rs  lib.rs  trampoline.rs
examples/atalanta_bsp/src/: core_sprint.rs  gpio.rs  interrupt.rs  lib.rs  mtimer.rs  register.rs  timer_group.rs  trap.rs  uart.rs  ufmt_debug.rs  ufmt_sprint.rs
examples/atalanta_bsp/src/clic/: intattr.rs  intctl.rs  intie.rs  smclicconfig.rs
examples/atalanta_bsp/src/mmap/: apb_timer.rs  cfg.rs  mod.rs  mtimer.rs  spi.rs
examples/doc/: identify_ftdi.md  periodic_tasks_results.md  rust-from-source.md  rust_rv32e_container.md  working_with_wsl.md
examples/doc/isr-wrappers/: jump.asm
examples/doc/isr_wrappers/: README.md  inline.asm
examples/hello_rt/: Cargo.toml  Justfile  Makefile  memory.x  rust-toolchain.toml
examples/hello_rt/.cargo/: config.toml
examples/hello_rt/examples/: base_is_wrong.rs  clic_all_irqs.rs  clic_hal.rs  clic_mtimer.rs  clic_nested.rs  clic_pend.rs  csr.rs  gpio_blink.rs  led.rs  mcause_should_be_interrupt.rs  mtimer_as_rtc.rs  mtimer_is_monotonic.rs  nested_interrupt_macros.rs  nested_irq.rs  nested_pcs_interrupt_macros.rs  periodic_tasks.rs  print_base.rs  timer.rs  timer_group.rs  timer_group_irq.rs  trampolines.rs  uart.rs  uart_echo.rs  uart_irq.rs
examples/hello_rt/src/: clic.rs  debug.rs  irq.rs  lib.rs  sprint.rs  tb.rs  uart.rs
examples/periodic_tasks/: Cargo.toml  Makefile  README.md
examples/periodic_tasks/.cargo/: config.toml
examples/periodic_tasks/src/: main.rs
examples/podman/: Containerfile.Ubuntu.20.04  Containerfile.Ubuntu.22.04  README.md  config.toml
examples/rt_ss_bsp/: Cargo.toml  README.md  build.rs  memory.x
examples/rt_ss_bsp/macros/: Cargo.toml
examples/rt_ss_bsp/macros/src/: archi.rs  lib.rs  trampoline.rs  validate.rs
examples/rt_ss_bsp/src/: clic.rs  core_sprint.rs  gpio.rs  interrupt.rs  led.rs  lib.rs  mtimer.rs  tb.rs  timer_group.rs  trap.rs  uart.rs  ufmt_debug.rs  ufmt_sprint.rs
examples/rt_ss_bsp/src/clic/: intctl.rs  intie.rs  intip.rs  inttrig.rs
examples/rt_ss_bsp/src/mmap/: apb_timer.rs  clic.rs  gpio.rs  mod.rs  mtimer.rs  spi.rs  timer.rs  uart.rs
examples/rust_minimal/: Cargo.toml  README.md  link.x
examples/rust_minimal/.cargo/: config.toml
examples/rust_minimal/examples/: fpga_button.rs  led.rs  minimal.rs  rve_abi.rs  uart.rs
examples/rust_minimal/src/: lib.rs
examples/smoke_tests/: Makefile  clic_tests.c  csr_tests.c  dma_test.c  exhaustive_timer.c  extensive_test.c  gpio_blink.c  jtag_access.c  memory_sanity.c  perf_test.c  timer_test.c  uart_interrupt.c  uart_rx.c  uart_sanity.c  uart_test.c
examples/smoke_tests/common/: crt0.S  link.ld
examples/smoke_tests/include/: circular_buffer.h  clic.h  common.h  csr_utils.h  pattern_buffer.h  uart.h  uart_interrupt.h
examples/smoke_tests/rt-torture/: crt0.S  torture.c
examples/smoke_tests/scripts/: compile.py  requirements.txt  xxd.py
examples/smoke_tests/src/clic_tests/: Makefile  clic_tests.c  crt0.S
examples/smoke_tests/src/csr_tests/: Makefile  crt0.S  csr_tests.c
examples/smoke_tests/src/dma_test/: Makefile  crt0.S  dma_test.c
examples/smoke_tests/src/exhaustive_timer/: Makefile  crt0.S  exhaustive_timer.c
examples/smoke_tests/src/extensive_test/: Makefile  crt0.S  extensive_test.c
examples/smoke_tests/src/fpga_button/: Makefile  crt0.S  fpga_button.c
examples/smoke_tests/src/gpio_blink/: Makefile  crt0.S  gpio_blink.c
examples/smoke_tests/src/jtag_access/: Makefile  crt0.S  jtag_access.c
examples/smoke_tests/src/memory_sanity/: Makefile  crt0.S  memory_sanity.c
fpga/: Makefile  README.md
fpga/constraints/: RT-SS_fpga_PYNQZ1_constraints.xdc  RT-SS_fpga_VCU118_constraints.xdc
fpga/hdl/src/: configurable_clock_divider_fpga.sv  prim_clock_gating.sv  rt_top_fpga_wrapper_PYNQZ1.sv  rt_top_fpga_wrapper_VCU118.sv  xilinx_dp_BRAM.sv  xilinx_sp_BRAM.sv
fpga/hdl/tb/: rt_top_fpga_tb.sv  tb_rt_ss_jtag_fpga.sv
fpga/ips/top_clock/: Makefile  top_clock_ip_run.tcl
fpga/scripts/: PYNQZ1.tcl  RT-SS_fpga_common.tcl  RT-SS_fpga_run.tcl  RT-SS_fpga_src_files.tcl  VCU118.tcl
fpga/utils/: connect-and-load.gdb  ft232_openocd_RT-SS.cfg
scripts/: check_fpga_timing.sh
src/: ss-files.list  tb-files.list  verilator.list
src/ip/: apb_cfg_regs.sv  apb_mtimer.sv  axi_to_obi.sv  axi_to_obi_intf.sv  clicint_reg_pkg.sv  clicint_reg_top.sv  dmi_jtag_tap.sv  dp_sram.sv  ibex_axi_bridge.sv  irq_pulse_cdc.sv  mem_axi_bridge.sv  obi_cut_intf.sv  obi_handshake_fsm.sv  obi_join.sv  obi_m2s_cut.sv  obi_sram_intf.sv  obi_to_apb_intf.sv  obi_to_axi_intf.sv  rt_bootrom.sv  rt_clic_axi.sv  rt_core.sv  rt_cpu.sv  rt_debug.sv  rt_dpmem.sv  rt_gpio.sv  rt_handshake_fsm.sv  rt_ibex_bootrom.sv  rt_interconnect.sv  rt_irq.sv  rt_mem.sv  rt_mem_axi_intf.sv  rt_mem_mux.sv  rt_mem_mux_threeway.sv  rt_memory_banks.sv  rt_peripherals.sv  rt_pkg.sv  rt_register_interface.sv  rt_timer.sv  rt_top.sv  rt_top_unpacked.sv  (+3 more)
src/tb/: rt_jtag_pkg.sv  tb_rt_ss.sv  uart.sv  vip_rt_top.sv
src/wrapper/: rt_ss_wrapper_0.v
stims/: exhaustive_timer_imem.hex  extensive_test_dmem.hex  extensive_test_imem.hex  nop_loop.hex  nop_loop_dmem.hex  nop_loop_imem.hex  rf_init.hex  timer_test_imem.hex  uart_interrupt_imem.hex
verilator/: Makefile  SimCxt.h  jtag_pkg.h  rt_top_unpacked.cpp  rt_top_unpacked.vlt  tb_rt_ss.vlt  utils_pkg.h
verilator/scripts/: verilate.sh  verilate_systemverilog.sh
verilator/vip/src/: Testbench.h  testbench.h
vsim/: Makefile
(+15 files in other folders)
