[package]
name = "atalanta-bsp"
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
version = "0.1.0"
edition = "2021"

[dependencies]
atalanta-bsp-macros = { path = "macros" }
riscv-rt = { git = "https://github.com/hegza/riscv", branch = "feat/rt-ibex", version = "0.13", features = [
    "single-hart",
    "v-trap",
], optional = true }
riscv = { git = "https://github.com/hegza/riscv", branch = "feat/rt-ibex", version = "0.11", features = [
    "clic",
    "critical-section-single-hart",
] }
riscv-peripheral = { git = "https://github.com/hegza/riscv", branch = "feat/rt-ibex", version = "0.1.0" }
ufmt = { version = "0.2.0", optional = true }
riscv-pac = { git = "https://github.com/hegza/riscv", branch = "feat/rt-ibex", version = "0.1.1" }
bitmask-enum = "2.2.5"
embedded-io = "0.6.1"
fugit = "0.3.7"

[features]
default = ["nest-continue"]

# Use this feature when using cosimulators such as QuestaSim
rtl-tb = []
# Use this feature when deploying on FPGA
fpga = []
rt = ["dep:riscv-rt", "panic"]
panic = []
ufmt = ["dep:ufmt"]
# Emit the common continue label for nested interrupts (default)
nest-continue = []
