[package]
name = "hello-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsp = { package = "atalanta-bsp", path = "../atalanta-bsp", features = [
    "nest-continue",
    "rt",
] }
fugit = "0.3.7"
ufmt = "0.2.0"

[features]
default = ["ufmt"]
ufmt = ["bsp/ufmt", "heapless/ufmt"]

# Use this feature when using cosimulators such as QuestaSim
rtl-tb = ["bsp/rtl-tb"]
# Use this feature when deploying on FPGA
fpga = ["bsp/fpga"]

[profile.dev]
# There seems to be a problem in riscv-rt with regards to linking in default_start_trap in debug
# mode. `codegen-units = 1` avoids that
codegen-units = 1
opt-level = "s"

[profile.release]
debug = true

[profile.'bloat']
inherits = "release"
strip = false

[dev-dependencies]
heapless = "0.8.0"
