[package]
name = "rust_minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# !!!: Dependencies not allowed for Rust minimal

[features]
# Use this feature when using cosimulators such as QuestaSim
rtl-tb = []
# Use this feature when deploying on FPGA
fpga = []

default = ["fpga"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
